# ska-minimizer-split

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: lib.rs  minimizer.rs  skf.rs
